# ai-news-agent

./: README.md
Learning/ai_news_agent/: README.md  pyproject.toml
Learning/ai_news_agent/src/ai_news_agent/: crew.py  main.py
Learning/ai_news_agent/src/ai_news_agent/config/: agents.yaml  tasks.yaml
Learning/basic/: README.md  pyproject.toml  report.md  report2.md
Learning/basic/src/basic/: crew.py  main.py
Learning/basic/src/basic/config/: tasks.yaml
