[project]
name = "ai_news_agent"
version = "0.1.0"
description = "ai-news-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ai_news_agent = "ai_news_agent.main:run"
run_crew = "ai_news_agent.main:run"
train = "ai_news_agent.main:train"
replay = "ai_news_agent.main:replay"
test = "ai_news_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
