[project]
name = "basic"
version = "0.1.0"
description = "basic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
basic = "basic.main:run"
run_crew = "basic.main:run"
train = "basic.main:train"
replay = "basic.main:replay"
test = "basic.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
